<resources>
    <string name="app_name">StudentView</string>
    <string name="placeholder">Placeholder</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="new_student">Tambah</string>
    <string name="nama">Nama</string>
    <string name="jurusan">Jurusan</string>
    <string name="nim">NIM</string>
    <string name="gender">Gender</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="hobi">Hobi</string>
    <string name="submit">Submit</string>
    <string name="detail_student">Nama</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="forgot_password">Forgot Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="auth">Auth</string>
    <string name="change_password">Change Password</string>
    <string name="password_baru">Password Baru</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="authenticate">Authenticate</string>
    <string name="view_image">View Image</string>
    <string-array name="major_array">
        <item>Sistem Informasi</item>
        <item>Cyber Security</item>
        <item>Teknik Informatika</item>
    </string-array>
    <string-array name="hobi_array">
        <item>Belajar</item>
        <item>Bermain</item>
        <item>Belajar sambil bermain</item>
    </string-array>
</resources>